<resources>
    <string name="app_name">PolskaVisa</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Польська віза</string>
    <string name="splash_button_title">Перейти к справочнику</string>
    <string name="visa_category">Категории виз</string>
    <string name="d_category">Национальная виза</string>
    <string name="c_category">Шенгенская виза</string>
    <string name="d_category_detail">Категория D - долгосрочная</string>
    <string name="c_category_detail">Категория C - краткосрочная</string>
    <string name="general_info">Общая информация</string>
    <string name="contacts">Контакты</string>
    <string name="consul">Консульские округа</string>
    <string name="step_by_step">Процесс подачи заявления</string>
    <string name="price_list">Визовый сбор</string>
    <string name="biomet">Биометрический процесс</string>
    <string name="important">ВАЖНО!</string>
    <string name="docs">Бланки заявлений</string>
    <string name="contact_detail">Адреса и контакты пунктов приема визових анкет</string>
    <string name="consul_detail">Информация о консульских округах Украины</string>
    <string name="step_by_step_detail">Пошаговая инструкция</string>
    <string name="price_list_detail">Суммы сбора и прочая информация</string>
    <string name="biomet_detail">Изменения в порядке подачи документов</string>
    <string name="important_detail">Прочая важная информация</string>
    <string name="docs_detail">Заявления для разных категорий виз</string>
    <string name="visa_c">Шенгенская виза</string>
    <string name="tur_visa">Туристическая виза</string>
    <string name="bus_visa">Служебная виза</string>
    <string name="fam_visa">Виза для членов семьи</string>
    <string name="sport_visa">Виза для участников спортивных и культурных мероприятий</string>
    <string name="stud_visa">Виза для студентов</string>
    <string name="med_visa">Виза для поездки с целью лечения</string>
    <string name="jurn_visa">Виза для журналистов</string>
    <string name="driv_visa">Виза для водителей международных перевозок</string>
    <string name="photo_req">Требования к фотографиям.PDF</string>
    <string name="tourism_gen_content_heading">I Основные документы, необходимые для получения краткосрочной визы</string>
    <string name="tourism_gen_content_pt1"><![CDATA[
    <br />
        <b>1</ b>.	Визовая анкета с вклеенной фотографией, заполненная латинскими буквами с личной подписью заявителя.
        Визовая анкета для несовершеннолетнего ребенка подается и подписывается одним из родителей или официальных опекунов.
        Если у ребенка нет отдельного паспорта, он вписан в паспорт родителя или опекуна — требуется заполнить отдельную
        анкету на ребенка, так как на него будет выдана отдельная виза.
        <br /><br />
        <b>2</ b>. Две цветные фотографии (1 – в случае подачи к ППВА в Киеве), согласно требованиям:
        ]]></string>
    <string name="tourism_gen_content_pt2"><![CDATA[
        <p><b>3</ b>. Загранпаспорт, отвечающий следующим требованиям:<br />
        <b>-</ b> действующий, по крайней мере, 3 месяца после даты последнего запланированного выезда из территории стран ЕС;<br />
        <b>-</ b> содержит, по крайней мере, две свободные страницы ( для виз) и выданный не раньше, чем 10 лет назад.
        В случае подачи документов на визу для несовершеннолетнего ребенка, вписанного в паспорт одного из родителей/официальных опекунов,
         паспорт должен содержать 2 дополнительные свободные страницы для ее/его визы;<br />
         <b>-</ b> в случае наличия других загранпаспортов, их нужно приобщить к визовой анкете (оригиналы и копии).
          Если предыдущие паспорта были сданы или аннулированные, необходимо предоставить внутренний паспорт с
          соответствующей отметкой  или справку с ОВИРа о его изъятие;<br />
        <b>-</ b> продленные паспорта к рассмотрению не принимаются;<br />
        <b>-</ b> необходимо также предоставить копию первой  страницы паспорта, копии всех
        Шенгенских виз за последние три года, копию последней национальной визы, а также копии всех
        штампов овъездах/выездах осуществлённых по этим визам;</p>
        <p><b>4</ b>.  Внутренний паспорт гражданина страны и копия всех его заполненных страниц;</p>
        <b>5</ b>. Оригинал и копия медицинского страхового полиса с зоной покрытия ЕС или весь мир, со
        страховой суммой не менее 30 000 евро. Стоимость франшизы должна быть в пределах 150 евро.
        (100 € в случае подачи документов в Ровно, Тернополе и Луцке);<br />
        В страховом полисе обязательно должна быть указана информация о том, что «Страховаязащитапредоставляется согласно
        «Решению Рады ЕС 2004/17/EG относительно медицинского страхования путешествующих заграницу» ( в случае подачи документов в ППВА в
        Луцком и Харьковском консульских округах).<br />
        Для разовой поездки страховка должна действовать все дни пребывания за рубежом и действовать не менее,
        чем на 15 дней дольше визы. В полисе должны быть указаны точные данные владельца, включающие дату рождения, ФИО, место прописки и данные загранпаспорта.<br />
        Для оформления визы необходимо предоставить оригинал страхового полиса, его копию и квитанцию об оплате за полис.<br />
        Оформить страховой полис имеет право только совершеннолетний гражданин, на ребенка страховку оформляют родитель или опекун.
        ]]></string>
    <string name="tourism_add_content_heading">II Дополнительные документы для несовершеннолетних</string>
    <string name="tourism_add_content"><![CDATA[
    <br />
    <b>-</ b> свидетельство о рождении (копия и оригинал);
        <br /><br />
        <b>-</ b> приглашение или бронь отеля для визы должны включать всех путешественников, включая детей
        до 18 лет;
        <br /><br />
        <b>-</ b> копия внутреннего паспорта обоих родителей;
        <br /><br />
        <b>-</ b> нотариально заверенное разрешение родителей или опекунов на выезд ребенка за рубеж, с
        указанием страны и сроков путешествия.
        Представляется даже при совместном выезде. При сопровождении ребенка третьими лицами в
        разрешении должны быть указаны личные данные этих людей;
        <br /><br />
        <b>-</ b> опекуну необходимо предоставить решение суда для подтверждения единоличного опекунства;
        <br /><br />
        вместе с паспортом несовершеннолетнего ребенка подается паспорт родителя или опекуна, с
        которым ребенок будет выезжать;
 ]]></string>
    <string name="tourism_empl_content_heading">III Документы, подтверждающие вид деятельности, наличие финансовых средств  и  связей с Украиной</string>
     <string name="tourism_empl_content"><![CDATA[
        <br />
        <b>
            <i>для наемных работников</i>
        </b>
        : справка, содержащая данные заявителя, должность, сумму зарплаты за 6 месяцев, имя и
        контакты лица, выдавшего документ;
        <br /><br />
        <b>
            <i>для сотрудников СПД</i>
        </b>
        — если предприятие работает без печати вместе со справкой с места работы предоставить копию
        регистрационных
        и банковских документов о начислении зарплаты сотруднику.
        При условии подачи в ППВА Винницкого консульского округа всем заявителям необходимо
        предоставить налоговый расчет «Форма № 1ДФ», заверенный печатью Налоговой службы;
        <br /><br />
        <b>
            <i>для предпринимателей</i>
        </b>
        — необходимо предоставить копии выписки из реестра, свидетельства о регистрации и лицензии
        или налоговая
        декларация, оформленная и заверенная печатью налоговой службы не позднее чем за 3 месяца до
        подачи документов на визу.
        При условии подачи в ППВА Львовского консульского округа, дополнительно к оригиналам
        регистрационных документов необходимо
        предоставить квитанции об оплате налога, как подтверждение деятельности предпринимателя;
        <br /><br />
        <b>
            <i>для неработающих граждан</i>
        </b>
        — требуется выписка из банка о наличии финансовых средств и расход за последние 3 месяца или
        подписанная заявителем декларация о его финансовой ситуации.
        В случае подачи к ППВА Киева безработном заявителям необходимо предоставить: справку из
        банка о наличии средств на счете + выписку о движении
        средств за последние три месяца и подписанную декларацию, или документы на собственность (в
        оригинале) и декларацию;
        <br /><br />
        <b>
            <i>для пенсионеров</i>
        </b>
        — оригинал и копия пенсионного удостоверения и выписка о начислении пенсии за последние
        полгода из Пенсионного фонда;
        <br /><br />
        <b>
            <i>для школьников и студентов</i>
        </b>
        — справка с места учебы с указанием информации об отсутствии занятий на время путешествия
        или о том, что руководство вуза не возражает против поездки;
        <br /><br />
        <b>
            <i>для тех, кто путешествует впервые</i>
        </b>
        может потребоваться документ, подтверждающий право собственности (на недвижимость, землю,
        автомобиль и другое имущество) или налоговая декларация, оформленная не позднее 3 месяцев до
        подачи заявления на визу;
        <br /><br />
        <b>
            <i>для иностранцев</i>
        </b>
        — документы, подтверждающие легальность пребывания на территории страны и подтверждение
        регистрации,
        действительной не менее 3 месяцев после планируемого возвращения из путешествия.

    ]]></string>
    <string name="tourism_fin_content_heading">IV Документ, подтверждающий наличие финансовых средств для покрытия расходов, связанных с путешествием в страны зоны Шенген</string>
     <string name="tourism_fin_content"><![CDATA[
    <br />
        <b>
            <i>Спонсорство</i>
        </b>
        — оригинал письма о спонсорстве, справка из банковской организации об остатке средств на
        счете и движении денег;
        <br /><br />
        <b>
            <i>Подтверждение собственных финансовых средств</i>
        </b>
        в виде справки из банка о наличии и движении денежных средств за последние
        3 месяца или предоставления оплаченных дорожных чеков с копиями;
        <br /><br />
        <dfn>В случае, если спонсором выступает третье лицо, письмо-спонсорство должно быть
            нотариально заверенным
            (для ППВА, что расположенные в Луцком, Винницком, Харьковском и Одесском округах).
        </dfn>
    ]]></string>
    <string name="tourism_purpose_content_heading">V Документы, подтверждающие главную цель пребывания</string>
    <string name="adress_content_title">Контакты</string>
    <string name="contact_caution">Внимание! Предварительно ознакомнетесь с резделом \"Консульские округа\" данного справочника</string>
    <string name="google_maps_button_text">Показать ППВА на карте</string>
    <string name="contact_north_title">Северная Украина</string>
    <string name="contact_east_title">Восточная Украина</string>
    <string name="contact_west_title">Западная Украина</string>
    <string name="contact_south_title">Южная Украина</string>
    <string name="contact_call_title">Колл-центр</string>
    <string name="docs_title">Бланки заявлений</string>
    <string name="docs_c_title">Шенгенская виза (категория C)</string>
    <string name="docs_d_title">Национальная виза (категория D)</string>
    <string name="c_doc_ua_title">Анкета UA.PDF</string>
    <string name="c_doc_pl_title">Анкета PL.PDF</string>
    <string name="c_doc_eng_title">Анкета ENG.PDF</string>
    <string name="d_doc_ua_title">Анкета UA.PDF</string>
    <string name="d_doc_pl_title">Анкета PL.PDF</string>
</resources>