<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contacts_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/address_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:scrollbars="vertical"
            android:text="@string/adress_content_title"
            android:textColor="@color/text_color"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/contacts_caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_rect"
            android:text="@string/contact_caution"
            android:textColor="@color/tool_bar_color"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="25dp"
            android:padding="5dp"
            android:textSize="17sp" />

        <Button
            android:id="@+id/g_map_button"
            android:text="@string/google_maps_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="25dp"
            android:textColor="@color/white_text"
            android:background="@drawable/rounded_corner_button"/>

        <LinearLayout
            android:id="@+id/contacts_north"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_rect"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/contacts_north_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_north_title"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/contacts_north_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_arrow_down" />

            </LinearLayout>

            <View
                android:id="@+id/contacts_north_dev"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <TextView
                android:id="@+id/contacts_north_content"
                android:layout_width="match_parent"
                android:textColor="@color/text_color"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contacts_east"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_rect"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/contacts_east_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_east_title"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/contacts_east_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_arrow_down" />

            </LinearLayout>

            <View
                android:id="@+id/contacts_east_dev"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <TextView
                android:id="@+id/contacts_east_content"
                android:layout_width="match_parent"
                android:textColor="@color/text_color"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contacts_west"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_rect"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/contacts_west_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_west_title"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/contacts_west_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_arrow_down" />

            </LinearLayout>

            <View
                android:id="@+id/contacts_west_dev"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <TextView
                android:id="@+id/contacts_west_content"
                android:layout_width="match_parent"
                android:textColor="@color/text_color"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contacts_south"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_rect"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/contacts_south_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_south_title"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/contacts_south_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_arrow_down" />

            </LinearLayout>

            <View
                android:id="@+id/contacts_south_dev"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <TextView
                android:id="@+id/contacts_south_content"
                android:layout_width="match_parent"
                android:textColor="@color/text_color"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contacts_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_rect"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/contacts_call_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_call_title"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/contacts_call_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_arrow_down" />

            </LinearLayout>

            <View
                android:id="@+id/contacts_call_dev"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <TextView
                android:id="@+id/contacts_call_content"
                android:layout_width="match_parent"
                android:textColor="@color/text_color"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>